--- a/References.bib
+++ b/References.bib
@@ -2041,7 +2041,7 @@ The two borehole heat exchangers were analyzed over both long- and short-term pe
   url      = {http://www.sciencedirect.com/science/article/pii/S0306261913005394},
 }
 
-@Article{Al-Khoury2011,
+@Article{Al-Khoury2010,
   author   = {Rafid Al-Khoury},
   title    = {Spectral framework for geothermal borehole heat exchangers},
   journal  = {International Journal of Numerical Methods for Heat \& Fluid Flow},
@@ -2495,6 +2495,15 @@ In 1996, a US federal agency began developing a new building energy simulation t
   booktitle = {ASHRAE Winter Conference},
   year      = {2016},
   note      = {January 23--27},
+}
+
+@Book{GeoenergyModelingII2016,
+  title     = {Geoenergy Modeling II: Shallow Geothermal Systems},
+  publisher = {Springer},
+  year      = {2016},
+  author    = {Haibing Shao and Philipp Hein and Agnes Sachse and Olaf Kolditz},
+  editor    = {Thomas Nagel and Haibing Shao},
+  address   = {Cham, Switzerland},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
